--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -31,6 +31,7 @@ jobs:
           cd lambda
           sam build
           sam deploy --stack-name lambda-database-population \
+            --s3-bucket ${{ secrets.S3_BUCKET_NAME }} \
             --capabilities CAPABILITY_IAM \
             --region us-east-2 \
         env:
