--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -22,9 +22,7 @@ jobs:
 
       - name: Install AWS SAM CLI
         run: |
-          curl -Lo aws-sam-cli-linux.zip https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip
-          unzip aws-sam-cli-linux.zip -d sam-installation
-          sudo ./sam-installation/install
+          sam --version
 
       - name: Build and Deploy Lambda
         run: |
