--- a/lambda/template.yml
+++ b/lambda/template.yml
@@ -5,7 +5,7 @@ Resources:
   DatabaseLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: PopulateDatabase
+      FunctionName: PopulateDatabase # Name of the function
       Handler: app.lambda_handler
       Runtime: python3.11
       CodeUri: ./
