secrets config using ssm

--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - main
     paths:
-      - "lambda/*"
+      - "lambda/app.py"
+      - "lambda/utils.py"
+      - "lambda/requests-layer/**"
 
 jobs:
   deploy_lambda:
